.kustomize/web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: web
    spec:
      containers:
        - image: caddy:2.9.1-alpine
          name: web
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 443
              protocol: UDP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /etc/caddy
              name: web-cm0
            - mountPath: /data
              name: web-data
            - mountPath: /config
              name: web-config
      restartPolicy: Always
      volumes:
        - configMap:
            name: web-cm0
          name: web-cm0
        - name: web-data
          persistentVolumeClaim:
            claimName: web-data
        - name: web-config
          persistentVolumeClaim:
            claimName: web-config
